add a very simple log facility
This is a very cheesy logging framework. There is little need to
do something really fancy at this point. Let's start with something
simple and improve as we go, e.g. logging into syslog etc.

--- a/Makefile.am
+++ b/Makefile.am
@@ -70,7 +70,8 @@ libfirmware_a_SOURCES = \
 firmwared_SOURCES = \
 		src/firmwared.c \
 		src/manager.h \
-		src/manager.c
+		src/manager.c \
+		src/log-util.h
 firmwared_LDADD = \
 		libfirmware.a \
 		$(LIBUDEV_LIBS)
