make firmware loading path configureable
In case the firmware is not to be found in the usual places
allow the system intrator to define the lookup path.

--- a/Makefile.am
+++ b/Makefile.am
@@ -23,7 +23,8 @@ EXTRA_DIST =
 AM_CPPFLAGS = \
 	-include $(top_builddir)/build/config.h \
 	-I $(top_srcdir)/src \
-	-I $(top_builddir)/src
+	-I $(top_builddir)/src \
+	-DFIRMWARE_PATH="$(FIRMWARE_PATH)"
 
 AM_CFLAGS = \
 	-fdata-sections \
